<resources>
    <string name="app_name">TweetstormMaker</string>

    <string name="btn_label_save">Save Draft</string>
    <string name="btn_label_compose">Compose</string>
    <string name="btn_label_tweet">Tweet</string>
    <string name="btn_label_back">Back</string>
    <string name="btn_label_discard_non_local">Discard Local Copy</string>
    <string name="btn_label_discard_local">Discard Draft</string>
    <string name="btn_label_unsend">Unsend</string>
    <string name="btn_label_preview">Preview</string>
    <string name="btn_label_unsend_all_partially_sent_tweetstorms">Unsend All</string>
    <string name="btn_label_discard_all_sent_tweetstorms">Discard All Local Copies</string>
    <string name="btn_label_dialog_positive_button">OK</string>
    <string name="btn_label_dialog_negative_button">Cancel</string>
    <string name="btn_label_dialog_yes_button">Yes</string>
    <string name="btn_label_dialog_no_button">No</string>
    <string name="edit_text_hint_empty"/>

    <string name="action_view_title_search">Search</string>

    <string name="dialog_message_redirect_dialog">"You will be redirected to the following URL to authorize this app to tweet using your account: "</string>
    <string name="dialog_title_pin_dialog">ENTER YOUR PIN</string>
    <string name="dialog_message_logout_dialog">Are you sure to log out?</string>

    <string name="notification_message_login_successful">Login Successful</string>
    <string name="notification_message_login_failed">Login Failed</string>
    <string name="notification_message_send_tweetstorm_successful">Tweetstorm Successfully Sent</string>
    <string name="notification_message_send_tweetstorm_failed_some_tweets_sent">Tweetstorm Partially Sent\n(You can unsend the partially sent Tweetstorm in the "Partially Sent" list.)</string>
    <string name="notification_message_send_tweetstorm_failed_no_tweet_sent">Sending Tweetstorm Failed\n(No tweet was sent.)</string>
    <string name="notification_message_unsend_tweetstorm_successful">Tweetstorm Fully Unsent</string>
    <string name="notification_message_unsend_tweetstorm_failed_some_tweets_unsent">Tweetstorm Partially Unsent\n(You can try again later in the "Partially Sent")</string>
    <string name="notification_message_unsend_tweetstorm_failed_no_tweet_unsent">Unsending Tweetstorm Failed</string>
    <string name="notification_message_unsend_tweetstorms_successful">Tweetstorms Fully Unsent</string>
    <string name="notification_message_unsend_tweetstorms_failed_some_tweetstorms_unsent">Tweetstorms Partially Unsent\n(You can try again later "Partially Sent".)</string>
    <string name="notification_message_unsend_tweetstorms_failed_no_tweetstorm_unsent">Tweetstorms Partially Unsent\n(You can try again later "Partially Sent".)</string>
    <string name="notification_message_unsend_tweetstorms_failed_no_tweet_unsent">Unsending Tweetstorms Failed\n(No tweet was unsent.)</string>

    <string name="content_description_profile_image">profile image</string>

    <string name="default_name">Your Name</string>
    <string name="default_twitter_handle">\@your_twitter_handle</string>

    <string name="drawer_item_title_local_drafts">Drafts</string>
    <string name="drawer_item_content_description_local_drafts">Click to navigate to local drafts</string>
    <string name="drawer_item_title_sent_tweetstorms">Sent</string>
    <string name="drawer_item_title_partially_sent_tweetstorms">Partially Sent</string>
    <string name="drawer_item_title_login">Login</string>
    <string name="drawer_item_title_logout">Logout</string>
    <string name="drawer_item_title_main_settings">Settings</string>

    <string name="nav_label_local_list_fragment">Drafts</string>
    <string name="nav_label_sent_list_fragment">Sent Tweetstorms</string>
    <string name="nav_label_partially_sent_list_fragment">Partially Sent Tweetstorms</string>
    <string name="nav_label_local_edit_fragment">Draft</string>
    <string name="nav_label_non_local_fragment">Tweetstorm</string>
    <string name="nav_label_main_settings_fragment">Settings</string>
    <string name="nav_label_preview_list_fragment">Tweets Preview</string>
    <string name="nav_label_redirect_dialog_fragment"/>
    <string name="nav_label_pin_dialog_fragment"/>
    <string name="nav_label_logout_dialog_fragment"/>

    <string name="list_is_empty">There is nothing to show.</string>

    <string name="preference_key_numbering_tweets">numbering_tweets</string>
    <string name="preference_title_numbering_tweets">Numbering Tweets</string>
    <string name="preference_summary_numbering_tweets">Send tweetstorms with numbering at the end of each tweet.</string>

    <string name="preference_key_save_to_draft_after_unsending_fully_sent">keep_unsent_fully_sent_tweetstorms_in_drafts</string>
    <string name="preference_title_save_to_draft_after_unsending_fully_sent">Keep Unsent Tweetstorms</string>
    <string name="preference_summary_save_to_draft_after_unsending_fully_sent">Keep fully sent tweetstorms in \"Drafts\" after successfully unsending them.</string>
</resources>