<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout_drawer_header_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/default_profile_normal"
            android:contentDescription="@string/content_description_profile_image"/>

        <TextView
            android:id="@+id/text_view_twitter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_name"
            android:textAppearance="?attr/textAppearanceHeadline6"/>

        <TextView
            android:id="@+id/text_view_twitter_handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_twitter_handle"
            android:textAppearance="?attr/textAppearanceBody2"/>

    </LinearLayout>

</LinearLayout>